# templating

./: .env.example  Cargo.toml  Dockerfile  README.md  build.rs  sqlx-data.json
.sqlx/: query-2eada95136e971027f78d52262d4c54077bdd44aaf2dab8520963a263fdf204a.json  query-334513ff009345f9127fa3f568b6b7caa5d9b32abb90a3e40fbf8a1e6d6fc733.json  query-5898c14eceb1d45cd4318521d907eedf6867df7545ee89b0b0b3bc3c278aa24d.json  query-5bb138f5d3bd7c0ad1675ca735d493fa51440df7e1f4c360c059cce5ed88ea52.json  query-7b833dc1c785a6bde1888a93e736890da84b7a779c578a707f4fe84c0bc8d306.json  query-7b91be0a11ccc879aa761eebf0cddc81eea3ce28148a65beebf3df578b4944f8.json  query-8c4732bfa5e99312cec131f374e7e6133b535baf50e7a5a0e394e18949d3afd8.json  query-ad914a5194a8c8fbfd3f34c3104b992f85a608c60602f5378223eb9afe609a9b.json  query-af4378a0d1c6a39dfc4fc6446f2ed03d4d9ae0efabb484571278947b8e49d567.json
migrations/: 20230411161348_init.sql
src/: config.rs  main.rs  seed.rs
src/handler/: mod.rs  templating.rs
src/repository/: input.rs  mod.rs  template.rs
src/service/: mod.rs  templating.rs
